--- a/recyclens_app/pubspec.yaml
+++ b/recyclens_app/pubspec.yaml
@@ -30,10 +30,55 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  google_fonts: ^5.1.0
+  image_picker: ^1.0.4
+  intl: ^0.19.0
+  flutter_speed_dial: ^7.0.0
+  salomon_bottom_bar: ^3.3.2
+  badges: ^3.1.2
+  transparent_image: ^2.0.1
+  flutter_zoom_drawer: ^3.2.0
+  get: ^4.7.2
+  animated_text_kit: ^4.2.3
+  simple_animations: ^5.0.0
+  shimmer: ^3.0.0
+  camera: ^0.10.5+5
+  path_provider: ^2.1.5
+  path: ^1.9.0
+  permission_handler: ^11.3.1
+  flutter_easyloading: ^3.0.5
+  awesome_dialog: ^3.2.1
+  another_flushbar: ^1.12.30
+  lottie: ^3.1.2
+  flutter_advanced_avatar: ^1.5.0
+  rive_animated_icon: ^2.0.0
+  icons_plus: ^5.0.0
+  smooth_page_indicator: ^1.2.1
+  animations: ^2.0.11
+  flutter_animate: ^4.2.0
+  scroll_to_hide: ^2.2.1
+  firebase_core: ^3.13.0
+  firebase_auth: ^5.5.2
+  awesome_snackbar_content: ^0.1.5
+  geolocator: ^13.0.4
+  url_launcher: ^6.2.5
+  flutter_spinkit: ^5.1.0
+  google_generative_ai: ^0.3.2
+  speech_to_text: ^7.0.0
+  flutter_tts: ^4.2.2
+  flutter_markdown: ^0.7.7
+  cloud_firestore: ^5.6.6
+  firebase_storage: ^12.4.5
+  flutter_image_compress: ^2.4.0
+  uuid: ^4.5.1
+  timeago: ^3.6.0
+  carousel_slider: ^5.0.0
+  google_maps_flutter: ^2.12.1
+  tflite_flutter: ^0.11.0
+  image: ^4.5.4
+  flutter_native_splash: ^2.4.6
+  
 
 dev_dependencies:
   flutter_test:
@@ -58,9 +103,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
+    - assets/anim/
+    - assets/models/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
