--- a/recyclens_app/pubspec.yaml
+++ b/recyclens_app/pubspec.yaml
@@ -78,6 +78,9 @@ dependencies:
   tflite_flutter: ^0.11.0
   image: ^4.5.4
   flutter_native_splash: ^2.4.6
+  geocoding: ^3.0.0
+  youtube_player_flutter: ^9.1.1
+  lucide_icons: ^0.257.0
   
 
 dev_dependencies:
