--- a/recyclens_app/pubspec.yaml
+++ b/recyclens_app/pubspec.yaml
@@ -46,7 +46,7 @@ dependencies:
   camera: ^0.10.5+5
   path_provider: ^2.1.5
   path: ^1.9.0
-  permission_handler: ^11.3.1
+  permission_handler: ^12.0.0+1
   flutter_easyloading: ^3.0.5
   awesome_dialog: ^3.2.1
   another_flushbar: ^1.12.30
@@ -81,6 +81,7 @@ dependencies:
   geocoding: ^3.0.0
   youtube_player_flutter: ^9.1.1
   lucide_icons: ^0.257.0
+
   
 
 dev_dependencies:
