--- a/recyclens_app/android/app/src/main/AndroidManifest.xml
+++ b/recyclens_app/android/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
 <uses-permission android:name="android.permission.SEND_SMS"/>
     
     <application
-        android:label="recyclens_app"
+        android:label="recycLens"
         android:name="${applicationName}"
         android:usesCleartextTraffic="true"
         android:icon="@mipmap/ic_launcher">
